// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration filter 1`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 10,
    "id": RecordId {
      "table": "user",
      "value": "bob",
    },
    "name": "Bob",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;

exports[`Integration filter 2`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
]
`;

exports[`Integration filter 3`] = `
[
  {
    "age": 25,
    "id": RecordId {
      "table": "user",
      "value": "alice",
    },
    "name": "Alice",
  },
  {
    "age": 65,
    "id": RecordId {
      "table": "user",
      "value": "charlie",
    },
    "name": "Charlie",
  },
]
`;
